test/tests/ParameterizedNonGeneric.panda
class ParameterizedNonGeneric {
    def error:String<Int>

    @class
    method main() {
        def error := ParameterizedNonGeneric<String>()
    }
}